--- a/styles/main.css
+++ b/styles/main.css
@@ -1,17 +1,71 @@
-@font-face {
-  font-family: "roboto";
-  src: url("file:///Users/sandrarialperez/Downloads/Roboto");
+:root {
+  font-family: "Roboto", sans-serif;
+  --brand-font: Roboto;
 }
-body {
+* {
+  margin: 0;
+  padding: 0;
+}
+.container_header {
+  width: 100%;
+  height: 60px;
+  background-color: black;
+  display: flex;
+  justify-content: space-between;
+  position: sticky;
+  top: 0;
+}
+.logo {
+  margin: 10px;
+}
+
+.hamburguer {
+  margin: 10px;
+}
+
+.main_part {
+  height: 50%;
+  background-color: aqua;
+}
+
+/* body {
   background-color: aqua;
 }
 .encabezado {
   color: white;
 }
-.header {
-  display: block;
-  height: 20px;
+
+.header_links {
+  display: flex;
+  height: 80px;
+  width: 100%;
   background-color: black;
   font-family: "roboto";
   color: white;
 }
+.links {
+  display: flex;
+  list-style: none;
+  justify-content: flex-end;
+}
+.item {
+  padding-left: 3px;
+  padding-right: 3px;
+}
+.image {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.navegation {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.links-2 {
+  display: flex;
+  list-style: none;
+}
+  justify-content: flex-end;
+}
+*/
