--- a/styles/main.css
+++ b/styles/main.css
@@ -33,7 +33,7 @@
 .main_part {
   padding: 110px 10px 20px 10px;
   height: 50%;
-  background-color: aqua;
+  background-color: #1d75de;
 }
 
 .title_1 {
@@ -59,7 +59,7 @@
   border-radius: 20px;
   color: white;
   width: 85%;
-  margin: 0 auto;
+  margin: 10px auto;
   height: 2em;
   display: flex;
   justify-content: center;
@@ -67,8 +67,25 @@
 }
 
 .terms {
-  padding: 10px;
+  padding: 15px;
+  margin-top: 10px;
   color: white;
+  font-size: 10px;
+}
+.white_section {
+  padding: 40px;
+  margin: 0 auto;
+}
+.title_2 {
+  font-weight: bold;
+  font-size: 35px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.icons {
+  padding: 40px;
 }
 /* body {
   background-color: aqua;
